# agentic-communication-bridge

./: .gitignore  README.md  Readme.md  aliases.sh  full-stack.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: evaluator_agent.py  planner_agent.py
backend/app/api/: metadata_api.py  workflow_api.py
backend/app/core/: config.py  enums.py  logger.py  middleware.py  tool_registry.py
backend/app/models/: workflow_models.py  workflow_state.py
backend/app/rag/: __init__.py  embedding_service.py  sample_vendors.json  vector_store.py  vendor_retriever.py
backend/app/repositories/: __init__.py  task_repository.py
backend/app/runtime/: event_streamer.py  execution_engine.py  workflow_runtime.py
backend/app/schemas/: base_response.py  metadata_schema.py  websocket_schema.py
backend/app/services/: agent_orchestrator_service.py  agent_planner.py  legacy_orchestrator_compat.py  llm_service.py  metadata_service.py
backend/app/storage/: workflow_repository.py
backend/app/tools/: __init__.py  analysis_tool.py  base_tool.py  draft_tool.py  draft_writer_tool.py  execution_tool.py  (+7 more)
backend/docs/: coding-guidelines.md  data-flow-deep-dive.md  logging-system.md  metadata-api.md  rag-architecture.md  review-fix-log.md  websocket-architecture.md
backend/tests/: __init__.py  conftest.py  test_event_streamer.py  test_llm_service.py  test_orchestrator.py  test_reconnect.py  test_state_transitions.py  test_stop_states.py  test_websocket.py  test_workflow_runtime.py  test_workflow_runtime_lifecycle.py
(+17 files in other folders)
